<resources>
    <string name="app_name">Not Bored</string>
    <string name="participants">Participants</string>
    <string name="participantsNumber">Number of participants</string>
    <string name="start">Start</string>
    <string name="termsAndConditions">Terms and conditions</string>
    <string name="titleTermsAndConditions">Terms and conditions</string>
    <string name="textTerms" translatable="false">
\n\nLorem ipsum dolor sit amet consectetur adipiscing elit inceptos ridiculus iaculis,
nullam ligula elementum duis tellus maecenas nec fermentum sed dictum
laoreet, taciti donec habitant quam purus ultricies porta posuere sociis. Cubilia
        senectus netus integer tempor dignissim viverra nostra tellus scelerisque aliquet,
semper penatibus tempus sociosqu class sociis bibendum justo etiam, rutrum
aenean et eget pretium volutpat eu dictum dictumst.\n\n Praesent gravida ridiculus
cursus luctus maecenas in libero mi interdum, auctor
ullamcorper eget nam eros condimentum litora tristique erat, fusce rhoncus
mauris cras aptent non et ultricies. Iaculis porttitor etiam pulvinar proin fringilla
ad, sem ornare sociosqu ultrices litora himenaeos egestas, eros laoreet mauris
leo porta. Nibh interdum facilisis dapibus magnis phasellus tortor fusce nostra
quam, ante non elementum himenaeos id hac et hendrerit eros, dui at sollicitudin
turpis viverra molestie cras quis.\n\n Dignissim faucibus auctor in vitae porttitor
tellus nascetur tempor sociosqu, elementum dis ultricies eu tempus tincidunt lectus posuere,
et ac interdum commodo montes convallis curae facilisis. Vitae diam phasellus litora ad aenean
himenaeos, magnis malesuada nec metus faucibus, turpis mollis hac lacinia
lacus. Condimentum dis in sed vel molestie integer, gravida eget volutpat
interdum bibendum scelerisque magnis, penatibus non sollicitudin convallis
egestas. Aptent mi ligula conubia justo habitant cubilia tellus curabitur, a nisi
integer non eget vivamus cursus hac, lacus rutrum ridiculus tempor litora nostra
dis.\n\n Nisl pulvinar taciti tellus diam quam dictum cursus potenti euismod natoque
feugiat mattis ornare tortor, aliquam orci dapibus inceptos id egestas ante viverra
donec aptent suscipit nulla. Eget nisl fringilla cras felis maecenas nisi ridiculus id
conubia hac primis sem ullamcorper porttitor, rutrum ac sodales ultrices
vestibulum cum leo semper fusce porta eu fermentum. Proin nisi suspendisse
class facilisi curabitur quisque, fusce vulputate semper a nulla velit, duis in orci
faucibus turpis. Risus metus magnis aliquam accumsan laoreet congue per,
    </string>
    <string name="TryAnother">Try another</string>

    <array name="activity_list">
        <item>Educational</item>
        <item>Recreational</item>
        <item>Social</item>
        <item>Diy</item>
        <item>Charity</item>
        <item>Cooking</item>
        <item>Relaxation</item>
        <item>Music</item>
        <item>Busywork</item>
    </array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="priceMedium">Medium</string>
    <string name="priceRelaxation">Relaxation</string>
    <string name="priceActivity">Price</string>
    <string name="participantNumber">Participants</string>
    <string name="activityTitle">Título da atividade</string>

</resources>